# DoodleJump

./: .gitignore  CMakeLists.txt  LICENSE  README.md
fonts/: CMakeLists.txt
include/: Camera.hpp  CollisionManager.hpp  Game.hpp  Player.hpp  ScoreManager.hpp
include/Core/: Config.hpp  GameState.hpp  GameStateManager.hpp  HighScoreManager.hpp  ResourceCache.hpp  ResourceManager.hpp
include/Item/: Spring.hpp
include/Physics/: PhysicsState.hpp
include/Platform/: BrokenPlatform.hpp  MovingPlatform.hpp  NormalPlatform.hpp  Platform.hpp  PlatformEntry.hpp  PlatformEntryFactory.hpp  PlatformFactory.hpp  PlatformManager.hpp  PlatformSpawner.hpp  PlatformType.hpp
include/UI/: GameOver.hpp  HUD.hpp  MainMenu.hpp  UIHelper.hpp
src/: Camera.cpp  CollisionManager.cpp  Game.cpp  Player.cpp  ScoreManager.cpp  main.cpp
src/Core/: GameStateManager.cpp  HighScoreManager.cpp  ResourceManager.cpp
src/Item/: Spring.cpp
src/Platform/: BrokenPlatform.cpp  MovingPlatform.cpp  NormalPlatform.cpp  Platform.cpp  PlatformEntry.cpp  PlatformEntryFactory.cpp  PlatformFactory.cpp  PlatformManager.cpp  PlatformSpawner.cpp
src/UI/: GameOver.cpp  HUD.cpp  MainMenu.cpp  UIHelper.cpp
